--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -1,14 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:orientation="horizontal">
-    <ImageView
+    android:orientation="horizontal"
+    android:padding="2dp">
+    <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/news_image"
-        android:layout_width="70dp"
-        android:layout_height="50dp" />
-    <TextView
-        android:id="@+id/news_title"
+        android:layout_margin="2dp"
+        android:layout_width="100dp"
+        android:layout_height="70dp" />
+    <LinearLayout
+        android:layout_margin="2dp"
         android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_weight="1"/>
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
+        <TextView
+            android:paddingTop="1dp"
+            android:paddingBottom="1dp"
+            android:id="@+id/news_title"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            />
+        <TextView
+            android:paddingTop="1dp"
+            android:paddingBottom="1dp"
+            android:id="@+id/news_summary"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="10dp" />
+
+    </LinearLayout>
+
 </LinearLayout>
