将新闻的更新放在NewsService里

--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -1,18 +1,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:my="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="cn.dhtv.mobile.NewsFragment"
     android:orientation="vertical">
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="获取新闻"
-        android:id="@+id/test"/>
 
     <com.viewpagerindicator.TabPageIndicator
         android:id="@+id/news_category"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:padding="10dip"
+
+        />
+       <!-- android:padding="10dip"
         android:background="@drawable/custom_tab_indicator"
         android:textColor="#FF555555"
         android:textSize="16sp"
@@ -22,7 +20,10 @@
         android:fadingEdge="horizontal"
         android:fadingEdgeLength="8dp"
         android:divider="@drawable/custom_tab_indicator_divider"
-        android:dividerPadding="10dp"        />
+        android:dividerPadding="10dp"
+        android:gravity="center"
+        android:maxLines="1"-->
+
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
