--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cn.dhtv.mobile.WebViewActivity">
+    tools:context="cn.dhtv.mobile.activity.WebViewActivity">
 
     <WebView
         android:layout_width="match_parent"
