--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:my="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="cn.dhtv.mobile.NewsFragment"
+    android:layout_height="match_parent" tools:context="cn.dhtv.mobile.fragment.NewsFragment"
     android:orientation="vertical">
 
     <com.viewpagerindicator.TabPageIndicator
