--- a/app/src/main/res/layout/news_page.xml
+++ b/app/src/main/res/layout/news_page.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<uk.co.senab.actionbarpulltorefresh.extras.actionbarcompat.PullToRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/refresh_view"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.handmark.pulltorefresh.library.PullToRefreshListView
+    <cn.dhtv.mobile.widget.FooterRefreshListView
         android:id="@+id/news_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
      />
-</LinearLayout>
+</uk.co.senab.actionbarpulltorefresh.extras.actionbarcompat.PullToRefreshLayout>
