--- a/app/src/main/res/layout/news_page.xml
+++ b/app/src/main/res/layout/news_page.xml
@@ -8,5 +8,6 @@
         android:id="@+id/news_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:animateLayoutChanges="true"
      />
 </uk.co.senab.actionbarpulltorefresh.extras.actionbarcompat.PullToRefreshLayout>
