--- a/app/src/main/res/layout/list_item_news.xml
+++ b/app/src/main/res/layout/list_item_news.xml
@@ -7,7 +7,8 @@
         android:id="@+id/news_image"
         android:layout_margin="2dp"
         android:layout_width="100dp"
-        android:layout_height="70dp" />
+        android:layout_height="70dp"
+        />
     <LinearLayout
         android:layout_margin="2dp"
         android:layout_width="0dp"
