--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <resources>
 
     <color name="black_overlay">#66000000</color>
+    <color name="image_background">#ffc0c0c0</color>
 
 </resources>
