--- a/app/src/main/res/layout/list_item_news.xml
+++ b/app/src/main/res/layout/list_item_news.xml
@@ -8,6 +8,7 @@
         android:layout_margin="2dp"
         android:layout_width="100dp"
         android:layout_height="70dp"
+        android:scaleType="fitXY"
         />
     <LinearLayout
         android:layout_margin="2dp"
