--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <resources>
 
+    <color name="test">#5c000000</color>
+    <color name="test2">#b9000000</color>
+
+
     <color name="black_overlay">#66000000</color>
     <color name="image_background">#ffc0c0c0</color>
+    <color name="title_overlay">#5c000000</color>
+
 
 </resources>
