--- a/app/src/main/res/layout/fragment_video_player.xml
+++ b/app/src/main/res/layout/fragment_video_player.xml
@@ -4,14 +4,19 @@
     android:orientation="vertical"
     tools:context="cn.dhtv.mobile.fragment.TvFragment">
 
-    <SurfaceView
+    <com.google.android.exoplayer.VideoSurfaceView
         android:id="@+id/player"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <!--<android.support.v7.widget.RecyclerView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>-->
+        android:layout_weight="1"/>
+    <Button
+        android:id="@+id/test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="looping?"/>
 
 </LinearLayout>
