--- a/app/src/main/res/layout/list_item_tv.xml
+++ b/app/src/main/res/layout/list_item_tv.xml
@@ -5,6 +5,11 @@
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:singleLine="true"
+        android:textColor="@color/text_state"/>
+
 
 </LinearLayout>
