略完善广播代码，完成BaseRecyclerView，为其添加itemattachdetach监听接口，是否实用待研究

--- a/app/src/main/res/layout/fragment_audio.xml
+++ b/app/src/main/res/layout/fragment_audio.xml
@@ -6,6 +6,7 @@
 
     <ImageView
         android:id="@+id/fm"
+        android:src="@drawable/radio_button"
         android:layout_width="100dp"
         android:layout_height="100dp" />
     <android.support.v7.widget.RecyclerView
