--- a/app/src/main/res/layout/tab_pager.xml
+++ b/app/src/main/res/layout/tab_pager.xml
@@ -5,7 +5,8 @@
     <com.viewpagerindicator.TabPageIndicator
         android:id="@+id/pager_title"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"/>
+        android:layout_width="match_parent"
+        />
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
