--- a/app/src/main/res/layout/list_item_news.xml
+++ b/app/src/main/res/layout/list_item_news.xml
@@ -2,39 +2,51 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="2dp">
+    android:padding="@dimen/padding_list_item"
+    >
     <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/news_image"
-        android:layout_margin="2dp"
+        android:layout_marginTop="@dimen/abc_button_padding_vertical_material"
+        android:layout_marginBottom="@dimen/abc_button_padding_vertical_material"
+        android:layout_marginRight="@dimen/abc_button_padding_vertical_material"
         android:layout_width="100dp"
         android:layout_height="70dp"
         android:scaleType="fitXY"
         />
     <LinearLayout
-        android:layout_margin="2dp"
+        android:layout_marginLeft="@dimen/abc_button_padding_vertical_material"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical">
-        <TextView
-            android:paddingTop="1dp"
-            android:paddingBottom="1dp"
-            android:id="@+id/news_title"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:textColor="@android:color/black"
-            />
-        <TextView
-            android:paddingTop="1dp"
-            android:paddingBottom="1dp"
-            android:id="@+id/news_summary"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
 
-            />
         <TextView
+            android:id="@+id/news_title"
+            android:layout_margin="@dimen/abc_control_corner_material"
+            android:paddingTop="1dp"
+            android:paddingBottom="1dp"
             android:layout_width="match_parent"
-            android:layout_height="10dp" />
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/text_size_title_subtitle"
+            android:lines="1"
+            />
+
+        <TextView
+            android:id="@+id/news_summary"
+            android:layout_margin="@dimen/abc_control_corner_material"
+            android:paddingTop="1dp"
+            android:paddingBottom="1dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size_body_small"
+            android:maxLines="2"
+            android:lineSpacingMultiplier="1.3"
+            />
+
+        <!--<TextView
+            android:layout_width="match_parent"
+            android:layout_height="10dp" />-->
 
     </LinearLayout>
 
