--- a/app/src/main/res/layout/pager_with_tab.xml
+++ b/app/src/main/res/layout/pager_with_tab.xml
@@ -12,14 +12,14 @@
         stl:stl_indicatorInFront="false"
         stl:stl_indicatorInterpolation="linear"
         stl:stl_indicatorColor="#40C4FF"
-        stl:stl_indicatorThickness="4dp"
-        stl:stl_indicatorCornerRadius="2dp"
+        stl:stl_indicatorThickness="3dp"
+        stl:stl_indicatorCornerRadius="1dp"
         stl:stl_underlineColor="#4D000000"
-        stl:stl_underlineThickness="1dp"
+        stl:stl_underlineThickness="0dp"
         stl:stl_dividerColor="#4D000000"
         stl:stl_dividerThickness="1dp"
         stl:stl_defaultTabTextAllCaps="false"
-        stl:stl_defaultTabTextColor="#FC000000"
+        stl:stl_defaultTabTextColor="@color/tab_text_state"
         stl:stl_defaultTabTextSize="@dimen/text_size_tab"
         stl:stl_defaultTabTextHorizontalPadding="15dp"
         stl:stl_defaultTabTextVerticalPadding="@dimen/abc_button_padding_vertical_material"
