--- a/app/src/main/res/layout/widget_refresh_footer.xml
+++ b/app/src/main/res/layout/widget_refresh_footer.xml
@@ -7,7 +7,7 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
+        style="?android:attr/progressBarStyleSmall"
         android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textSize="22sp"
+        android:textSize="@dimen/text_size_title"
         android:text="@string/refresh_footer_clickable"/>
 
 
