重新写了NewsListCollector,好不好用还不知道。

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <resources>
+    <color name="acton_bar_background">#ff2347a3</color>
 
     <color name="test">#5c000000</color>
     <color name="test2">#b9000000</color>
