添加了应用初始化功能，初始化时同步Category信息，添加定时同步信息功能（Category信息）

--- a/app/src/main/res/layout/news_page.xml
+++ b/app/src/main/res/layout/news_page.xml
@@ -4,7 +4,7 @@
     android:id="@+id/refresh_view"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <cn.dhtv.mobile.widget.FooterRefreshListView
+    <cn.dhtv.mobile.ui.widget.FooterRefreshListView
         android:id="@+id/news_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
