--- a/app/src/main/res/layout/page_recycle_view.xml
+++ b/app/src/main/res/layout/page_recycle_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<cn.dhtv.mobile.widget.MySwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<cn.dhtv.mobile.ui.widget.MySwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/refresh_view"
      android:layout_width="match_parent"
@@ -10,4 +10,4 @@
         android:scrollbarStyle="insideOverlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-</cn.dhtv.mobile.widget.MySwipeRefreshLayout>
+</cn.dhtv.mobile.ui.widget.MySwipeRefreshLayout>
