--- a/app/src/main/res/layout/pager_with_tab.xml
+++ b/app/src/main/res/layout/pager_with_tab.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <cn.dhtv.mobile.widget.MySmartTabLayout
+    <cn.dhtv.mobile.ui.widget.MySmartTabLayout
         android:id="@+id/pager_title"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
