--- a/app/src/main/res/layout/widget_empty_view.xml
+++ b/app/src/main/res/layout/widget_empty_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<cn.dhtv.mobile.widget.EmptyView xmlns:android="http://schemas.android.com/apk/res/android"
+<cn.dhtv.mobile.ui.widget.EmptyView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -19,4 +19,4 @@
         android:visibility="gone"/>
 
 
-</cn.dhtv.mobile.widget.EmptyView>
+</cn.dhtv.mobile.ui.widget.EmptyView>
