--- a/app/src/main/res/layout/widget_pager_image.xml
+++ b/app/src/main/res/layout/widget_pager_image.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<cn.dhtv.mobile.widget.ImagePagerView2 xmlns:android="http://schemas.android.com/apk/res/android"
+<cn.dhtv.mobile.ui.widget.ImagePagerView2 xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <cn.dhtv.mobile.view.MyRatioViewPager
+        <cn.dhtv.mobile.ui.view.MyRatioViewPager
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -42,7 +42,7 @@
 
             </LinearLayout>-->
 
-            <cn.dhtv.mobile.widget.PictureIndicator
+            <cn.dhtv.mobile.ui.widget.PictureIndicator
                 android:id="@+id/picture_indicator"
                 android:layout_weight="0"
                 android:layout_width="wrap_content"
@@ -56,4 +56,4 @@
 
     </LinearLayout>
 
-</cn.dhtv.mobile.widget.ImagePagerView2>
+</cn.dhtv.mobile.ui.widget.ImagePagerView2>
