--- a/app/src/main/res/layout/page_recycle_view.xml
+++ b/app/src/main/res/layout/page_recycle_view.xml
@@ -9,5 +9,6 @@
         android:scrollbars="vertical"
         android:scrollbarStyle="insideOverlay"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        />
 </cn.dhtv.mobile.ui.widget.MySwipeRefreshLayout>
