写了MediaController,不是在弹出窗口中显示，可能要改成弹出窗口

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <resources>
     <color name="white">#ffffffff</color>
+    <color name="black">#ff000000</color>
 
     <color name="acton_bar_background">#ff2347a3</color>
 
