--- a/app/src/main/res/layout/widget_empty_view.xml
+++ b/app/src/main/res/layout/widget_empty_view.xml
@@ -7,7 +7,7 @@
         android:id="@+id/hint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
         android:textSize="@dimen/abc_text_size_large_material"
         android:text="@string/empty_view_hint"/>
     <ProgressBar
@@ -15,7 +15,8 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_above="@id/hint"
+        android:layout_centerHorizontal="true"
         android:visibility="gone"/>
 
 
