合并姜帆给的文件前的提交

--- a/dhtv-andoird-library/src/main/res/layout/widget_video_controller.xml
+++ b/dhtv-andoird-library/src/main/res/layout/widget_video_controller.xml
@@ -25,6 +25,12 @@
             android:textSize="20sp"
             android:textColor="@color/dhtv_white"
             />
+        <ImageButton
+            android:id="@+id/share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_share"
+            />
 
     </LinearLayout>
 
